--- a/pom.xml
+++ b/pom.xml
@@ -15,16 +15,6 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
         <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>3.10.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>2.0.12</version>
-        </dependency>
-        <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>1.14.3</version>
@@ -34,26 +24,15 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.13</version>
         </dependency>
-        <!-- Flying Saucer -->
-<!--        <dependency>-->
-<!--            <groupId>org.xhtmlrenderer</groupId>-->
-<!--            <artifactId>flying-saucer-core</artifactId>-->
-<!--            <version>9.1.20</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>com.openhtmltopdf</groupId>-->
-<!--            <artifactId>openhtmltopdf-core</artifactId>-->
-<!--            <version>1.0.10</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>com.openhtmltopdf</groupId>-->
-<!--            <artifactId>openhtmltopdf-pdfbox</artifactId>-->
-<!--            <version>1.0.10</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-translate</artifactId>
+            <version>2.3.3</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.pdfbox</groupId>
             <artifactId>pdfbox</artifactId>
-            <version>2.0.24</version> <!-- 替换为最新的版本号 -->
+            <version>2.0.24</version>
         </dependency>
 	</dependencies>
 	<build>
